# ridf-decoder

./: .gitignore  CMakeLists.txt  README.md
sources/: CMakeLists.txt
sources/anacore/: CMakeLists.txt  TArtDecoderA3100.cc  TArtDecoderA3400.cc  TArtDecoderAD413A.cc  TArtDecoderAMTTDC.cc  TArtDecoderBigEndianV7XX.cc  TArtDecoderCTM405.cc  TArtDecoderDSP.cc  TArtDecoderFactory.cc  TArtDecoderFactory.hh  TArtDecoderFixed16.cc  TArtDecoderFixed24.cc  TArtDecoderFixed32.cc  TArtDecoderHINP.cc  TArtDecoderL3377d.cc  TArtDecoderLUPO.cc  TArtDecoderMADC32.cc  TArtDecoderMDPP16.cc  TArtDecoderMQDC32.cc  TArtDecoderMQDC32.hh  TArtDecoderMTDC32.cc  TArtDecoderNeulandTS.cc  TArtDecoderP716X.cc  TArtDecoderP716XZ.cc  TArtDecoderRPV130.cc  TArtDecoderRPV130.hh  TArtDecoderSIS3820.cc  TArtDecoderSIS3820.hh  TArtDecoderTC842.cc  TArtDecoderTC842.hh  TArtDecoderV550.cc  TArtDecoderV7XX.cc  TArtDecoderV830.cc  TArtEventInfo.hh  TArtEventStore.cc  TArtEventStore.hh  TArtFileDataSource.cc  TArtFileDataSource.hh  TArtKafkaDataSource.cc  TArtKafkaDataSource.hh  (+17 more)
sources/main/: CMakeLists.txt  ParquetWriter.cpp  ParquetWriter.hpp  mira_streaming.hpp  ridf2parquet.cpp  ridf2stream.cpp  ridfstream_decoder.cpp
